--- a/settings.html
+++ b/settings.html
@@ -28,37 +28,37 @@
             </div>
         </div>
     </nav>
-    <main class="settings-main">
-        <section class="settings-hero">
-            <i class="fas fa-cog settings-hero-icon"></i>
+    <main>
+        <section>
+            <i class="fas fa-cog"></i>
             <h1>Einstellungen</h1>
             <p>Stelle die App nach deinen Wünschen ein</p>
         </section>
-        <div class="settings-grid">
-            <section class="settings-card">
+        <div>
+            <section>
                 <h2><i class="fas fa-palette"></i> Darstellung</h2>
-                <div class="settings-option-row">
+                <div>
                     <span>Dark Mode</span>
                     <label class="switch">
                         <input type="checkbox" id="darkModeCheck">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="settings-option-row">
+                <div>
                     <span>Akzentfarbe</span>
                     <input type="color" id="accentColorPicker" value="#339af0" aria-label="Akzentfarbe wählen">
                 </div>
             </section>
-            <section class="settings-card">
+            <section>
                 <h2><i class="fas fa-bars"></i> Navigation</h2>
-                <div class="settings-option-row">
+                <div>
                     <span>Bottom Navigation anzeigen</span>
                     <label class="switch">
                         <input type="checkbox" id="bottomNavEnabledCheck">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="settings-option-row">
+                <div>
                     <span>Am Bildschirm fixiert</span>
                     <label class="switch">
                         <input type="checkbox" id="bottomNavFixedCheck">
@@ -66,23 +66,23 @@
                     </label>
                 </div>
             </section>
-            <section class="settings-card">
+            <section>
                 <h2><i class="fas fa-gamepad"></i> Spieloptionen</h2>
-                <div class="settings-option-row">
+                <div>
                     <span>Timer aktivieren</span>
                     <label class="switch">
                         <input type="checkbox" id="timerCheck">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="settings-option-row">
+                <div>
                     <span>Tippfehler erlauben</span>
                     <label class="switch">
                         <input type="checkbox" id="typoCheck">
                         <span class="slider round"></span>
                     </label>
                 </div>
-                <div class="settings-option-row">
+                <div>
                     <span>Kostenpflichtige Tipps</span>
                     <label class="switch">
                         <input type="checkbox" id="paidHintsCheck">
@@ -90,19 +90,19 @@
                     </label>
                 </div>
             </section>
-            <section class="settings-card easter-eggs-card">
+            <section>
                 <h2><i class="fas fa-egg"></i> Easter Eggs</h2>
-                <div class="easter-eggs-list" id="easterEggsList">
+                <div id="easterEggsList">
                     <!-- Easter Eggs werden hier dynamisch angezeigt -->
                 </div>
-                <div class="easter-eggs-hint">
+                <div>
                     <i class="fas fa-info-circle"></i> Tipp: Es gibt versteckte Überraschungen in der App!
                 </div>
             </section>
         </div>
-        <div class="settings-actions">
-            <button class="btn btn-primary" id="saveSettingsBtn"><i class="fas fa-save"></i> Einstellungen speichern</button>
-            <span class="save-feedback" id="settingsSaveFeedback" style="display:none;"><i class="fas fa-check-circle"></i> Gespeichert!</span>
+        <div>
+            <button id="saveSettingsBtn"><i class="fas fa-save"></i> Einstellungen speichern</button>
+            <span id="settingsSaveFeedback" style="display:none;"><i class="fas fa-check-circle"></i> Gespeichert!</span>
         </div>
     </main>
     <script src="script.js"></script>
