Alle Verweise auf settings.html entfernt

--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
                     <a href="faq.html" class="menu-item">
                         <i class="fas fa-circle-question"></i> FAQ
                     </a>
-                    <a href="settings.html" class="menu-item">
+                    <!-- <a href="settings.html" class="menu-item"> -->
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
                 </div>
@@ -277,7 +277,7 @@
                 <div class="points-feature-card">
                     <i class="fas fa-clock"></i>
                     <h4>Timer & Zeitbonus</h4>
-                    <p>Mit aktiviertem Timer kannst du bis zu <strong>+20 Bonuspunkte</strong> für schnelle Antworten verdienen! Je mehr Zeit übrig bleibt, desto mehr Bonus gibt es. Aktiviere den Timer in den <a href="settings.html">Einstellungen</a>.</p>
+                    <!-- <p>Mit aktiviertem Timer kannst du bis zu <strong>+20 Bonuspunkte</strong> für schnelle Antworten verdienen! Je mehr Zeit übrig bleibt, desto mehr Bonus gibt es. Aktiviere den Timer in den <a href="settings.html">Einstellungen</a>.</p> -->
                 </div>
             </div>
         </section>
@@ -381,7 +381,7 @@
                 <i class="fas fa-circle-question"></i>
                 <span>FAQ</span>
             </a>
-            <a href="settings.html" class="bottom-nav-item" data-nav="settings">
+            <!-- <a href="settings.html" class="bottom-nav-item" data-nav="settings"> -->
                 <i class="fas fa-cog"></i>
                 <span>Einstellungen</span>
             </a>
