--- a/impressum.html
+++ b/impressum.html
@@ -37,7 +37,7 @@
                     <a href="faq.html" class="menu-item">
                         <i class="fas fa-circle-question"></i> FAQ
                     </a>
-                    <a href="settings.html" class="menu-item">
+                    <!-- <a href="settings.html" class="menu-item"> -->
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
                 </div>
@@ -212,7 +212,7 @@
                     Sie können alle gespeicherten Daten jederzeit selbstständig löschen:
                 </p>
                 <ul class="legal-list">
-                    <li>Über die Entwickler-Tools in den <a href="settings.html">Einstellungen</a></li>
+                    <!-- <li>Über die Entwickler-Tools in den <a href="settings.html">Einstellungen</a></li> -->
                     <li>Durch Löschen der Browser-Daten / Cache</li>
                     <li>Durch Nutzung des privaten/inkognito Modus</li>
                 </ul>
@@ -396,7 +396,7 @@
                 <i class="fas fa-circle-question"></i>
                 <span>FAQ</span>
             </a>
-            <a href="settings.html" class="bottom-nav-item" data-nav="settings">
+            <!-- <a href="settings.html" class="bottom-nav-item" data-nav="settings"> -->
                 <i class="fas fa-cog"></i>
                 <span>Einstellungen</span>
             </a>
