--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="faq.html" class="menu-item">
                         <i class="fas fa-circle-question"></i> FAQ
                     </a>
-                    <a href="settings.html" class="menu-item">
+                    <!-- <a href="settings.html" class="menu-item"> -->
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
                 </div>
@@ -235,7 +235,7 @@
                 <i class="fas fa-circle-question"></i>
                 <span>FAQ</span>
             </a>
-            <a href="settings.html" class="bottom-nav-item" data-nav="settings">
+            <!-- <a href="settings.html" class="bottom-nav-item" data-nav="settings"> -->
                 <i class="fas fa-cog"></i>
                 <span>Einstellungen</span>
             </a>
