--- a/faq.html
+++ b/faq.html
@@ -35,7 +35,7 @@
                     <a href="help.html" class="menu-item">
                         <i class="fas fa-book"></i> Hilfe
                     </a>
-                    <!-- <a href="settings.html" class="menu-item"> -->
+                    <a href="settings_new.html" class="menu-item">
                         <i class="fas fa-cog"></i> Einstellungen
                     </a>
                 </div>
@@ -406,7 +406,7 @@
                 <i class="fas fa-circle-question"></i>
                 <span>FAQ</span>
             </a>
-            <!-- <a href="settings.html" class="bottom-nav-item" data-nav="settings"> -->
+            <a href="settings_new.html" class="bottom-nav-item" data-nav="settings">
                 <i class="fas fa-cog"></i>
                 <span>Einstellungen</span>
             </a>
