--- a/settings_new.html
+++ b/settings_new.html
@@ -40,13 +40,112 @@
 	</nav>
 
 	<main class="container">
-		<h1>Einstellungen</h1>
-		<!-- Hier können zukünftige Einstellungen eingefügt werden -->
+		<h1 class="settings-title"><i class="fas fa-cog"></i> Einstellungen</h1>
+		<div class="settings-card">
+			<section class="settings-section">
+				<h2><i class="fas fa-palette"></i> Design</h2>
+				<label for="theme-select">Farbschema:</label>
+				<select id="theme-select">
+					<option value="light">Hell</option>
+					<option value="dark">Dunkel</option>
+				</select>
+			</section>
+			<section class="settings-section">
+				<h2><i class="fas fa-bell"></i> Benachrichtigungen</h2>
+				<label class="switch">
+					<input type="checkbox" id="notifications-toggle">
+					<span class="slider round"></span>
+				</label>
+				<span id="notifications-status">Benachrichtigungen sind aus</span>
+			</section>
+			<section class="settings-section">
+				<h2><i class="fas fa-undo"></i> Zurücksetzen</h2>
+				<button id="reset-btn" class="reset-btn"><i class="fas fa-trash-restore"></i> Alle Einstellungen zurücksetzen</button>
+			</section>
+		</div>
+		<div class="settings-card dev-tools-card">
+			<section class="settings-section">
+				<h2><i class="fas fa-tools"></i> Entwickler-Tools</h2>
+				<button id="toggleDevMode" class="dev-btn"><i class="fas fa-terminal"></i> Dev Mode umschalten</button>
+				<button id="showDevReloadBtn" class="dev-btn"><i class="fas fa-sync-alt"></i> Reload-Button anzeigen/verstecken</button>
+				<div id="devModeStatus"></div>
+			</section>
+		</div>
 	</main>
 
 	<!-- Footer Container - wird durch footer.js geladen -->
 	<div id="footer-container"></div>
 
 	<script src="components/footer.js"></script>
+	<script>
+	// Theme-Umschaltfunktion
+	const themeSelect = document.getElementById('theme-select');
+	function applyTheme(theme) {
+		if (theme === 'dark') {
+			document.body.classList.add('dark-mode');
+		} else {
+			document.body.classList.remove('dark-mode');
+		}
+		localStorage.setItem('theme', theme);
+	}
+
+	// Benachrichtigungen
+	const notificationsToggle = document.getElementById('notifications-toggle');
+	const notificationsStatus = document.getElementById('notifications-status');
+	function updateNotificationStatus() {
+		const enabled = notificationsToggle.checked;
+		notificationsStatus.textContent = enabled ? 'Benachrichtigungen sind an' : 'Benachrichtigungen sind aus';
+		localStorage.setItem('notificationsEnabled', enabled ? 'true' : 'false');
+	}
+
+	// Einstellungen zurücksetzen
+	const resetBtn = document.getElementById('reset-btn');
+	function resetSettings() {
+		localStorage.removeItem('theme');
+		localStorage.removeItem('notificationsEnabled');
+		localStorage.removeItem('devMode');
+		localStorage.removeItem('showDevReloadBtn');
+		location.reload();
+	}
+
+	// Entwickler-Tools
+	const devModeBtn = document.getElementById('toggleDevMode');
+	const showDevReloadBtn = document.getElementById('showDevReloadBtn');
+	const devModeStatus = document.getElementById('devModeStatus');
+	function updateDevModeStatus() {
+		const devMode = localStorage.getItem('devMode') === 'true';
+		const reloadBtn = localStorage.getItem('showDevReloadBtn') !== 'false';
+		devModeStatus.innerHTML = `<b>Dev Mode:</b> ${devMode ? 'Aktiviert' : 'Deaktiviert'}<br><b>Reload-Button:</b> ${reloadBtn ? 'Sichtbar' : 'Versteckt'}`;
+	}
+	devModeBtn.addEventListener('click', () => {
+		const current = localStorage.getItem('devMode') === 'true';
+		localStorage.setItem('devMode', (!current).toString());
+		updateDevModeStatus();
+	});
+	showDevReloadBtn.addEventListener('click', () => {
+		const current = localStorage.getItem('showDevReloadBtn') !== 'false';
+		localStorage.setItem('showDevReloadBtn', (!current).toString());
+		updateDevModeStatus();
+	});
+
+	// Initialisierung
+	document.addEventListener('DOMContentLoaded', () => {
+		// Theme
+		const savedTheme = localStorage.getItem('theme') || 'light';
+		themeSelect.value = savedTheme;
+		applyTheme(savedTheme);
+		themeSelect.addEventListener('change', (e) => {
+			applyTheme(e.target.value);
+		});
+		// Benachrichtigungen
+		notificationsToggle.checked = localStorage.getItem('notificationsEnabled') === 'true';
+		updateNotificationStatus();
+		notificationsToggle.addEventListener('change', updateNotificationStatus);
+		// Reset
+		resetBtn.addEventListener('click', resetSettings);
+		// Dev Tools
+		updateDevModeStatus();
+	});
+	</script>
 </body>
 </html>
